[package]
name = "pyroscope_pyspy"
description = """
pyspy backend for Pyroscope Profiler.
"""
keywords = ["pyroscope", "profiler", "pyspy"]
authors = ["Abid Omar <contact@omarabid.com>"]
version = "0.2.5"
edition = "2021"
license = "Apache-2.0"
homepage = "https://pyroscope.io"
documentation  = "https://docs.rs/pyroscope"
repository = "https://github.com/pyroscope-io/pyroscope-rs"
readme = "README.md"

[dependencies]
py-spy = { version = "0.3.15", git = "https://github.com/deepseek-discovery/py-spy.git", rev = "2bdc29af" }
pyroscope = { version = "0.5.8", path = "../../" , default-features = false }
thiserror ="1.0"
log = "0.4"
inferno = "=0.11.14"

[features]
default = ["pyroscope/default"]
